Fix menu border on mobile

--- a/website/static/css/layout.css
+++ b/website/static/css/layout.css
@@ -232,6 +232,15 @@
   border-bottom: solid 2px #21125e;
 }
 
+@media only screen and (max-width: 568px) {
+  .slidingNav .siteNavGroupActive.siteNavItemActive:after {
+    border: none;
+  }
+  .navigationSlider .slidingNav ul li > a:hover::after {
+    border: none;
+  }
+}
+
 @media only screen and (min-width: 1024px) {
   .fixedHeaderContainer {
     position: static;
